# TorchJD-VAE

./: .gitignore  custom_aggregation.py  dataset.py  experiment.py  pairwise_loss_transform.py  pyproject.toml  run.py
configs/: vae.yaml
configs/grid_search/: mnist_vae.yaml  mnist_vae0.yaml  mnist_vae1.yaml  mnist_vae2.yaml  mnist_vae5.yaml  mnist_vae6.yaml  mnist_vae7.yaml  mnist_vae8.yaml
configs/grid_search2/: mnist_vae0.yaml  mnist_vae1.yaml  mnist_vae10.yaml  mnist_vae2.yaml  mnist_vae3.yaml  mnist_vae4.yaml  mnist_vae5.yaml  mnist_vae6.yaml  mnist_vae7.yaml  mnist_vae8.yaml  mnist_vae9.yaml
src/torchjd_vae/models/: __init__.py  beta_vae.py  betatc_vae.py  cat_vae.py  cvae.py  dfcvae.py  dip_vae.py  fvae.py  gamma_vae.py  hvae.py  info_vae.py  iwae.py  joint_vae.py  logcosh_vae.py  lvae.py  miwae.py  mssim_vae.py  swae.py  twostage_vae.py  vampvae.py  vanilla_vae.py  vq_vae.py  wae_mmd.py
